# ocaml-oktree

./: AGENTS.md  DEVELOP.md  NOTES.md  README.md  dune  dune-project  oktree.opam  oktree.opam.template
.github/workflows/: ci.yml  docs.yml  release.yml
benchmark/: README.md  benchmark.ml  dune  nearest.ml  octant_distance-2022-11-13-original-vs-hask.md  profile.ml  raw.txt
benchmark/reports/: 2026-02-13-optimisation-2.1-search_leaf.md  2026-02-13-optimisation-2.2-search_path-mutable-locals.md  2026-02-13-optimisation-2.3-search_leaf-to_tuple.md  2026-02-13-optimisation-2.4-search_leaf-array-backed.md
benchmark/results/: bench-20260125-172939.txt  bench-20260125-181256.txt  bench-20260125-184317.txt  bench-20260213-224300.txt
benchmarks/: NOTES.md  dune  nearest-2022-11-12-original-implementation.md  nearest-2022-11-15-original-implementation.md  nearest.ml  parsebench
benchmarks/results/: bench-20260125-173011.txt  bench-20260125-175528.txt  bench-20260125-184244.txt  bench-20260125-185050.txt  bench-20260125-190121.txt  bench-20260125-190839.txt
doc/: dune  index.mld  oktree.mld
lib/: DEBUG NOTES.md  dune  oktree.ml  oktree.mli  oktree_intf.ml  utils.ml  visualise.ml
test/: dune  test_oktree.ml
tests/: dune  test_oktree.ml
