(executable
 (name benchmark)
 (modules benchmark)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries core_bench core_unix gg oktree))

(rule
 (alias benchmark)
 (action
  (run %{exe:benchmark.exe} -quota 3 -stabilize-gc)))

(env
 (dev ; default profile for `dune build`
  (flags
   (:standard -warn-error -A)))
 (test ; default profile for `dune test`
  (flags
   (:standard -warn-error -A))))
