(library
 (name oktree)
 (public_name oktree)
 (modules oktree oktree_intf)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_deriving.enum
   ppx_deriving.map
   ppx_deriving.fold
   ppx_deriving.iter)))

(library
 (name oktree_visualise)
 (public_name oktree.visualise)
 (modules visualise)
 (optional)
 (enabled_if
  (= %{profile} visualise))
 (libraries oplot))

(env
 (dev
  (flags
   (:standard -warn-error -A)))
 (test
  (flags
   (:standard -warn-error -A)))
 (visualise
  (flags
   (:standard -warn-error -A))))
